--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GOOGLE_ID= 283241692457-fjpahi592h0lge3a51ttbluh5avdf3uo.apps.googleusercontent.com
 GOOGLE_SECRET= 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
+
+trial
